--- a/Ganzenbord/src/UI/MainGameScreen.fxml
+++ b/Ganzenbord/src/UI/MainGameScreen.fxml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="UI.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.MainGameScreenController">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <Pane prefHeight="200.0" prefWidth="473.0" GridPane.rowIndex="1">
+         <children>
+            <Button fx:id="btnRollDie" layoutX="208.0" layoutY="141.0" mnemonicParsing="false" onAction="#RollDieBtnClick" text="Roll Die" />
+         </children>
+      </Pane>
+   </children>
 </GridPane>
