--- a/Ganzenbord/src/Client/MainGameScreen.fxml
+++ b/Ganzenbord/src/Client/MainGameScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.MainGameScreenController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.MainGameScreenController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
