--- a/Ganzenbord/src/client/MainGameScreen.fxml
+++ b/Ganzenbord/src/client/MainGameScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.MainGameScreenController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MainGameScreenController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -18,7 +18,7 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="473.0" GridPane.rowIndex="1">
          <children>
-            <Button fx:id="btnRollDie" layoutX="208.0" layoutY="141.0" mnemonicParsing="false" onAction="#RollDieBtnClick" text="Roll Die" />
+            <Button fx:id="btnRollDie" layoutX="208.0" layoutY="141.0" mnemonicParsing="false" onAction="#rollDieBtnClick" text="Roll Die" />
          </children>
       </Pane>
    </children>
