Designed Join screen

--- a/Ganzenbord/src/client/LobbyScreen.fxml
+++ b/Ganzenbord/src/client/LobbyScreen.fxml
@@ -34,5 +34,15 @@
       <Label layoutX="392.0" layoutY="20.0" text="Gebruikersnaam" />
       <Button layoutX="247.0" layoutY="276.0" mnemonicParsing="false" text="Spel starten" />
       <Button layoutX="24.0" layoutY="351.0" mnemonicParsing="false" text="Terug naar hoofdmenu" />
+      <Label layoutX="247.0" layoutY="93.0" text="ID:">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="287.0" layoutY="93.0" text="0000">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
