--- a/Ganzenbord/src/client/MainGameScreen.fxml
+++ b/Ganzenbord/src/client/MainGameScreen.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-
+<?import javafx.scene.text.Font?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MainGameScreenController">
    <columnConstraints>
@@ -16,10 +18,20 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane prefHeight="200.0" prefWidth="473.0" GridPane.rowIndex="1">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Button fx:id="btnRollDie" layoutX="208.0" layoutY="141.0" mnemonicParsing="false" onAction="#rollDieBtnClick" text="Roll Die" />
+            <Label layoutX="32.0" layoutY="24.0" text="Ganzenbord">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
+            <Button layoutX="520.0" layoutY="59.0" mnemonicParsing="false" text="Uitloggen" />
+            <Label layoutX="398.0" layoutY="32.0" text="Gebruikersnaam:" />
+            <Label layoutX="520.0" layoutY="32.0" text="USERNAME" />
+            <Pane layoutX="32.0" layoutY="107.0" prefHeight="237.0" prefWidth="431.0" style="-fx-border-color: #000000; -fx-border-image-width: 1;" />
+            <Button fx:id="btnRollDie" layoutX="471.0" layoutY="284.0" mnemonicParsing="false" onAction="#rollDieBtnClick" prefHeight="60.0" prefWidth="111.0" text="Gooi dobbelsteen" />
+            <Button layoutX="14.0" layoutY="362.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Quit game" />
          </children>
-      </Pane>
+      </AnchorPane>
    </children>
 </GridPane>
