--- a/Ganzenbord/src/client/LobbyScreen.fxml
+++ b/Ganzenbord/src/client/LobbyScreen.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.LobbyScreenController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="58.0" prefWidth="371.0" text="Ganzenbord">
@@ -16,12 +15,12 @@
       </Label>
       <VBox layoutX="189.0" layoutY="178.0" prefHeight="91.0" prefWidth="222.0" style="-fx-border-width: 1; -fx-border-color: #000000;">
          <children>
-            <Label style="-fx-border-color: ;" text="PLAYER1">
+            <Label fx:id="lblPlayer1"  text="PLAYER1">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label text="PLAYER2">
+            <Label fx:id="lblPlayer2">
                <font>
                   <Font size="24.0" />
                </font>
@@ -29,17 +28,17 @@
          </children>
       </VBox>
       <Label layoutX="195.0" layoutY="154.0" text="Spelers:" />
-      <Button layoutX="501.0" layoutY="49.0" mnemonicParsing="false" text="Uitloggen" />
-      <Label layoutX="505.0" layoutY="20.0" text="USERNAME" />
+      <Button layoutX="501.0" layoutY="49.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" text="Uitloggen" />
+      <Label fx:id="lblUsername" layoutX="505.0" layoutY="20.0" text="USERNAME" />
       <Label layoutX="392.0" layoutY="20.0" text="Gebruikersnaam" />
-      <Button layoutX="247.0" layoutY="276.0" mnemonicParsing="false" text="Spel starten" />
-      <Button layoutX="24.0" layoutY="351.0" mnemonicParsing="false" text="Terug naar hoofdmenu" />
+      <Button layoutX="247.0" layoutY="276.0" mnemonicParsing="false" onAction="#btnStartGameOnclick" text="Spel starten" />
+      <Button layoutX="24.0" layoutY="351.0" mnemonicParsing="false" onAction="#btnBackOnClick" text="Terug naar hoofdmenu" />
       <Label layoutX="247.0" layoutY="93.0" text="ID:">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="287.0" layoutY="93.0" text="0000">
+      <Label fx:id="lblGameID" layoutX="287.0" layoutY="93.0" text="0000">
          <font>
             <Font size="24.0" />
          </font>
